# adops

./: .gitignore  Readme.md  adops.cabal
data/flyingthings/: A-0002-0010-disparity.pfm  A-0022-0015-disparity.pfm  B-0500-0009-disparity.pfm  Readme.md
data/stereo/params/: disp1c_bia@1.f32le  disp1c_krn@1x1x3x3x3.f32le  disp1cb_beta@1.f32le  disp1cb_gamma@1.f32le  disp1cb_mean@1.f32le  disp1cb_variance@1.f32le  disp1p_bia@16.f32le  disp1p_krn@16x1x1x1x1.f32le  disp1pn_beta@16.f32le  disp1pn_gamma@16.f32le  disp1pn_mean@16.f32le  disp1pn_variance@16.f32le  disp2c_bia@16.f32le  disp2c_krn@16x1x3x3x3.f32le  disp2cb_beta@16.f32le  disp2cb_gamma@16.f32le  disp2cb_mean@16.f32le  disp2cb_variance@16.f32le  disp2p_bia@16.f32le  disp2p_krn@16x16x1x1x1.f32le  disp2pn_beta@16.f32le  disp2pn_gamma@16.f32le  disp2pn_mean@16.f32le  disp2pn_variance@16.f32le  disp3c_bia@16.f32le  disp3c_krn@16x1x3x3x3.f32le  disp3cb_beta@16.f32le  disp3cb_gamma@16.f32le  disp3cb_mean@16.f32le  disp3cb_variance@16.f32le  disp3p_bia@16.f32le  disp3p_krn@16x16x1x1x1.f32le  disp3pn_beta@16.f32le  disp3pn_gamma@16.f32le  disp3pn_mean@16.f32le  disp3pn_variance@16.f32le  disp4c_bia@16.f32le  disp4c_krn@16x1x3x3x3.f32le  disp4cb_beta@16.f32le  disp4cb_gamma@16.f32le  (+68 more)
futhark/: Readme.md
futhark/bench/: Makefile  conv2d_dKrn_bench.c  index4.h
futhark/bench/conv2d_dKrn/: Makefile  Readme.md  conv2d_dKrn_bench.c  plot.gnuplot
futhark/ops/: conv2d.fut  conv2d_dInp.fut  conv2d_dKrn.fut  costVolume.fut  costVolume_dArrL.fut  regression.fut  regression_dInp.fut  sum.fut  tabulate.fut  tabulate4.fut
src/: Adops.hs  Main.hs
src/Adops/: Array.hs  Codec.hs  Elem.hs  Params.hs  Shape.hs
src/Adops/Array/: Elem.hs  Shape.hs
src/Adops/Op/: Activate.hs  Conv.hs  Disparity.hs  Norm.hs  Pool.hs  Reduce.hs
src/Demo/: Ascent.hs  Sobel.hs  Stereo.hs
