
name:           adops
version:        1.0.0.0
license:        PublicDomain
cabal-version:  >= 1.6
build-type:     Simple

executable adops
 hs-source-dirs: src
 build-depends:
        base, bytestring, vector, bmp

 main-is:       Main.hs

 other-modules:
        Adops
        Adops.Array
        Adops.Array.Elem
        Adops.Array.Shape

        Adops.Op.Conv
        Adops.Op.Disparity
        Adops.Op.Norm
        Adops.Op.Pool
        Adops.Op.Reduce

        Adops.Codec

        Demo.Sobel
        Demo.Stereo
        Demo.Ascent

 ghc-options:
        -O2

 extensions:
        PatternGuards
        PatternSynonyms
        TypeFamilies
        FlexibleContexts

